# DataBend

./: .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  README.md  app.js  convertWorker.js  index.html  kmeansWorker.js  main.js  package-lock.json  package.json  preload.js  spectralWorker.js  splash-preload.js  splash.html  styles.css  testApp.js  testWorker.js  test_dsp.js  test_extrap.js  test_nan.js  vst_host.spec
.github/workflows/: ci.yml
vst_host_backend/: vst_host.py
vst_host_juce/: CMakeLists.txt
vst_host_juce/Source/: HostWindow.cpp  HostWindow.h  Main.cpp
waveset-k-means-quantizer/: App.tsx  README.md  index.html  metadata.json  package.json  types.ts
waveset-k-means-quantizer/components/: ClusterChart.tsx  WaveformView.tsx
waveset-k-means-quantizer/services/: audioEngine.ts  audioUtils.ts  kmeans.ts
